fix spacings

--- a/src/styles/AppStyles.scss
+++ b/src/styles/AppStyles.scss
@@ -17,7 +17,8 @@
     width: 79%;
     display: flex;
     .dashboard-main {
-      width: 65%;
+      width: 62%;
+      padding-right: 30px;
     }
 
     .dashboard-news {
